fix: fix rotate menu and overflow: hidden

--- a/shelter/src/pages/pets/style.scss
+++ b/shelter/src/pages/pets/style.scss
@@ -42,6 +42,7 @@
       margin-top: 120px;
       height: 100%;
       padding-bottom: 101px;
+      overflow: hidden;
       .our-friends {
         display: flex;
         flex-direction: column;
